Prevent image box overflow

--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -175,3 +175,8 @@ table.table {
     background-color: #eeeeee;
   }
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
